[Delta][UniForm] Enabling Iceberg V3 (#7171)
#### Which Delta project/connector is this regarding?
<!--
Please add the component selected below to the beginning of the pull
request title
For example: [Spark] Title of my pull request
-->

- [x] Spark
- [ ] Standalone
- [ ] Flink
- [ ] Kernel
- [ ] Other (fill in here)

## Description

Enables UniForm **IcebergCompatV3** so Delta tables can be
created/upgraded to write Iceberg metadata under compat v3, and makes
the surrounding pieces (type allow-list, statistics schema) v3-aware.

- **Register IcebergCompatV3** (`IcebergCompat.scala`,
`UniversalFormat.scala`): add `IcebergCompatV3` to the set of known
compat versions and wire its `enforceInvariantsAndDependencies` into the
UniForm enforcement checks.
- **V3 type allow-list** (`IcebergCompat.scala`,
`spark-4.1/GeoTypesShim.scala`): `CheckTypeInV3AllowList` now
additionally allows `VariantType` and the geospatial types.
`GeoTypesShim.geoTypes` exposes `GeometryType`/`GeographyType`, which
feed `v3GeoSpatialTypes`.
- **Enable v3 by default** (`DeltaSQLConf.scala`): flip
`uniform.iceberg.v3` (allow create/upgrade of UniForm Iceberg v3 tables)
default from `false` to `true`.
- **Stats schema carries column IDs** (`StatisticsCollection.scala`):
the min/max and null-count stats schemas now propagate the
column-mapping field ID (`COLUMN_MAPPING_METADATA_ID_KEY`) for struct
and leaf fields. Iceberg stats are keyed by field ID, so fields without
a column ID are skipped during Delta -> Iceberg stats conversion.
- **Guard variant columns in the stats schema** (`DeltaSQLConf.scala`,
`StatisticsCollection.scala`): new internal config
`variantShredding.guardVariantInStatsSchema.enabled` (default `true`).
When enabled, `VARIANT` columns are only included in the data-skipping
stats schema if the table supports the `variantShredding` (or
`variantShredding-preview`) table feature. The config is a kill switch
that restores the prior unconditional behavior when disabled.
- **Test JVM mod